home screen drawer completed

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,19 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EnLife.NoActionBar">
-        <activity android:name=".screens.home.HomeActivity"></activity>
-        <activity android:name=".screens.walkthrough.WalkThroughActivity" />
-        <activity android:name=".screens.forgot_password.ForgotPasswordActivity" />
-        <activity
-            android:name=".screens.signup.SignUpActivity"
-            android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".screens.login.LoginActivity">
+        <activity android:name=".screens.home.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".screens.walkthrough.WalkThroughActivity" />
+        <activity android:name=".screens.forgot_password.ForgotPasswordActivity" />
+        <activity
+            android:name=".screens.signup.SignUpActivity"
+            android:windowSoftInputMode="adjustPan" />
+        <activity android:name=".screens.login.LoginActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
