--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.EnLife.NoActionBar">
         <activity android:name=".screens.goals.GoalManagementActivity"></activity>
-        <activity android:name=".screens.home.HomeActivity">
+        <activity android:name=".screens.main.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,7 +23,7 @@
         <activity
             android:name=".screens.signup.SignUpActivity"
             android:windowSoftInputMode="adjustPan" />
-        <activity android:name=".screens.login.LoginActivity" />
+        <activity android:name=".screens.main.fragments.login.LoginActivity" />
         <activity android:name=".MainActivity" />
     </application>
 
