--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.EnLife.NoActionBar">
-
         <activity android:name=".screens.main.HomeActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -25,6 +24,8 @@
             android:windowSoftInputMode="adjustPan" />
         <activity android:name=".screens.main.fragments.login.LoginActivity" />
         <activity android:name=".MainActivity" />
+
+        <receiver android:name=".WakeUpReceiver" />
     </application>
 
 </manifest>
